<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_renderer"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/choose_renderer_detail" />

    <Button
        android:id="@+id/direct_xml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_direct_xml" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/demo_direct_xml_detail" />

    <Button
        android:id="@+id/compose_interop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_compose_interop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/demo_compose_interop_detail" />

    <Button
        android:id="@+id/compose_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_compose_native" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/demo_compose_native_detail" />
</LinearLayout>
